thirdparty/boost/libs/log/test/compile_fail/.uuid
d1baeb03-d787-4391-bf6b-be473ee60d48